@@ -19,6 +19,7 @@
 * Checkout V2: Fix sandbox URL [nicolas-maalouf-cko] #2391
 * Checkout V2: Fix success_from not properly checking two possible success codes [davidsantoso]
 * SagePay: Support Repeat transactions [curiousepic] #2395
+* PayU LATAM: Fix incorrect capture method definition [davidsantoso]
 
 == Version 1.64.0 (March 6, 2017)
 * Authorize.net: Allow settings to be passed for CIM purchases [fwilkins] #2300
